# BaiduSongguo

./: .gitignore  CMakeLists.txt
20Week/: 20WeekQ1.cpp  20WeekQ1Answer.cpp
EighthWeek/: EighthQ1.cpp  EighthQ2.cpp  EighthQ3.cpp  EighthQ4.cpp
EleventhWeek/: EleventhQ1.cpp  EleventhQ2.cpp  EleventhQ4.cpp  EleventhQ5.cpp
FifthWeek/: FifthQ2.cpp  FifthQ3.cpp  FifthQ4.cpp  FifthQuestion1.cpp
FirstWeek/: MXRCompetition.cpp  chess.cpp  combineArr.cpp  factorial.cpp  matrixMultiple.cpp  powerOf2.cpp
FourthWeek/: Question1.cpp  Question2.cpp  Question3.cpp  Question4.cpp  Question5.cpp  第一题样例
FourthteenWeek/: Q4In14th.cpp  Q5In14th.cpp
NinthWeek/: Q1.cpp  Q3.cpp  Q4.cpp  Q5.cpp
SecondWeek/: A+BProblem.cpp  NoRepeatString.cpp  StandInQueue.cpp  maxPower.cpp  test.cpp
SeventhWeek/: Seventh6Q2_new.cpp  SeventhQ1.cpp  SeventhQ2.cpp  SeventhQ3.cpp  SeventhQ3_new.cpp  SeventhQ4.cpp
SixthWeek/: SixthQ1.cpp  SixthQ2.cpp  SixthQ3.cpp  SixthQ4.cpp
TenthWeek/: TenthQ1.cpp  TenthQ2.cpp  TenthQ3.cpp  TenthQ4.cpp  TenthQ5.cpp
ThirteenthWeek/: thirteenthQ5.cpp
thirdweek/: mytest.cpp  question1.cpp  question2.cpp  question4.cpp  simplifyString.cpp  test01.cpp  test02.cpp
