cmake_minimum_required(VERSION 3.22)
project(Baidu)

set(CMAKE_CXX_STANDARD 14)

add_executable(chess FirstWeek/chess.cpp)
add_executable(combineArr FirstWeek/combineArr.cpp)
add_executable(factorial FirstWeek/factorial.cpp)
add_executable(matrixMultiple FirstWeek/matrixMultiple.cpp)
add_executable(MXRCompetition FirstWeek/MXRCompetition.cpp)
add_executable(powerOf2 FirstWeek/powerOf2.cpp)
add_executable(NoRepeatString SecondWeek/NoRepeatString.cpp)
add_executable(A+BProblem SecondWeek/A+BProblem.cpp)
add_executable(StandInQueue SecondWeek/StandInQueue.cpp)
add_executable(maxPower SecondWeek/maxPower.cpp)
add_executable(test SecondWeek/test.cpp)
add_executable(simplifyString thirdweek/simplifyString.cpp)
add_executable(question1 thirdweek/question1.cpp)
add_executable(question2 thirdweek/question2.cpp)
add_executable(question4 thirdweek/question4.cpp)