cmake_minimum_required(VERSION 3.22)
project(Baidu)

set(CMAKE_CXX_STANDARD 14)

add_executable(chess FirstWeek/chess.cpp)
add_executable(combineArr FirstWeek/combineArr.cpp)
add_executable(factorial FirstWeek/factorial.cpp)
add_executable(matrixMultiple FirstWeek/matrixMultiple.cpp)
add_executable(MXRCompetition FirstWeek/MXRCompetition.cpp)
add_executable(powerOf2 FirstWeek/powerOf2.cpp)
add_executable(NoRepeatString SecondWeek/NoRepeatString.cpp)
add_executable(A+BProblem SecondWeek/A+BProblem.cpp)
add_executable(StandInQueue SecondWeek/StandInQueue.cpp)
add_executable(maxPower SecondWeek/maxPower.cpp)
add_executable(test SecondWeek/test.cpp)
add_executable(simplifyString thirdweek/simplifyString.cpp)
add_executable(question1 thirdweek/question1.cpp)
add_executable(question2 thirdweek/question2.cpp)
add_executable(question4 thirdweek/question4.cpp)
add_executable(test01 thirdweek/test01.cpp)
add_executable(test02 thirdweek/test02.cpp)
add_executable(Question1 FourthWeek/Question1.cpp)
add_executable(Question2 FourthWeek/Question2.cpp)
add_executable(Question3 FourthWeek/Question3.cpp)
add_executable(Question4 FourthWeek/Question4.cpp)
add_executable(Question5 FourthWeek/Question5.cpp)
add_executable(FifthQuestion1 FifthWeek/FifthQuestion1.cpp)
add_executable(FifthQ2 FifthWeek/FifthQ2.cpp)
add_executable(FifthQ4 FifthWeek/FifthQ4.cpp)
add_executable(FifthQ3 FifthWeek/FifthQ3.cpp)
add_executable(SixthQ4 SixthWeek/SixthQ4.cpp)
add_executable(SixthQ2 SixthWeek/SixthQ2.cpp)
add_executable(SixthQ3 SixthWeek/SixthQ3.cpp)
add_executable(SixthQq SixthWeek/SixthQ1.cpp)
add_executable(SeventhQ2 SeventhWeek/SeventhQ2.cpp)
add_executable(SevenQ3 SeventhWeek/SeventhQ3.cpp)
add_executable(SeventhQ4 SeventhWeek/SeventhQ4.cpp)
add_executable(SeventhQ1 SeventhWeek/SeventhQ1.cpp)
add_executable(Sixth6Q2_new SeventhWeek/Seventh6Q2_new.cpp)